<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codz.okah.school_grades.Login"
    android:background="@drawable/gradient_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/logo_notes"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/radius_10">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:paddingHorizontal="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textSize="28dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="20dp"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/dark_grey"
                    app:counterTextColor="@color/dark_grey"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:boxCollapsedPaddingTop="0dp"
                    app:boxBackgroundColor="@color/white"
                    android:hint="@string/your_id"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/email_input"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/medium"
                        android:paddingStart="0dp"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/dark_grey"
                        app:counterTextColor="@color/dark_grey"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="2dp"
                        app:boxCollapsedPaddingTop="0dp"
                        app:boxBackgroundColor="@color/white"
                        android:hint="@string/password"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/password_input"
                            android:textSize="15dp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/medium"
                            android:paddingStart="0dp"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot"
                        android:layout_alignParentEnd="true"
                        android:textSize="15dp"
                        android:fontFamily="@font/semi_bold"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>
                <TextView
                    android:layout_marginTop="60dp"
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:paddingVertical="13dp"
                    android:textSize="15dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:fontFamily="@font/medium"
                    android:background="@drawable/circlar_gradien_green"
                    android:gravity="center"
                    />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
    </LinearLayout>

</RelativeLayout>