<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.ProfHome">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:title="@string/app_name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RelativeLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/module_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        android:text="Module name"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/medium"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingBottom="10dp">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.6"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            android:text="#"
                            android:gravity="center"
                            android:fontFamily="@font/medium"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="4"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            android:text="Full name"
                            android:background="@drawable/radius_10"
                            android:backgroundTint="#0C018786"
                            android:fontFamily="@font/medium"
                            android:paddingVertical="5dp"
                            android:paddingHorizontal="10dp"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            android:text="TD"
                            android:gravity="center"
                            android:fontFamily="@font/medium"/>
                        <TextView
                            android:id="@+id/tpTitle"
                            android:visibility="gone"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            android:text="TP"
                            android:gravity="center"
                            android:fontFamily="@font/medium"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="14dp"
                            android:text="EXAM"
                            android:gravity="center"
                            android:fontFamily="@font/medium"/>

                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/listView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            />
                        <LinearLayout
                            android:id="@+id/edit_grades_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:visibility="gone"
                            android:background="@color/white"
                            >
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/editListView"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_margin="20dp"
                                >
                                <TextView
                                    android:id="@+id/cancelEditBtn"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:text="@string/cancel"
                                    android:gravity="center"
                                    android:paddingVertical="7dp"
                                    android:textSize="15sp"
                                    android:textColor="@color/white"
                                    android:background="@drawable/radius_10"
                                    android:backgroundTint="@color/hint_grey"
                                    />
                                <View
                                    android:layout_width="10dp"
                                    android:layout_height="10dp"/>
                                <TextView
                                    android:id="@+id/confirmEditBtn"
                                    android:layout_width="0dp"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:text="Upload"
                                    android:gravity="center"
                                    android:paddingVertical="7dp"
                                    android:textSize="15sp"
                                    android:textColor="@color/white"
                                    android:background="@drawable/radius_10"
                                    android:backgroundTint="@color/aqua_dark"
                                    />
                            </LinearLayout>
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingEditBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_edit"
                    android:backgroundTint="@color/orange"
                    android:layout_margin="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_autoPlay="true"
                    app:lottie_speed="1"
                    app:lottie_fileName="empty.json"
                    android:layout_centerInParent="true"
                    app:lottie_repeatMode="restart"
                    app:lottie_loop="true"
                    android:visibility="gone"
                    android:layout_marginHorizontal="30dp"
                    />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/chooseLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/module_spinner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/spinner_background">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Module :"
                        android:textSize="12sp"
                        android:textColor="@color/hint_grey"
                        android:alpha="0.6"
                        android:fontFamily="@font/medium"/>
                    <Spinner
                        android:id="@+id/module_spinner"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/section_spinner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/spinner_background">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Section :"
                        android:textSize="12sp"
                        android:textColor="@color/hint_grey"
                        android:alpha="0.6"
                        android:fontFamily="@font/medium"/>
                    <Spinner
                        android:id="@+id/section_spinner"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/group_spinner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/spinner_background">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Group :"
                        android:textSize="12sp"
                        android:textColor="@color/hint_grey"
                        android:alpha="0.6"
                        android:fontFamily="@font/medium"/>
                    <Spinner
                        android:id="@+id/group_spinner"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/confirmFilterBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:background="@drawable/radius_10"
                    android:backgroundTint="@color/aqua_dark"
                    />


            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone"
        >
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>